Closed
Bug 420960
Opened 17 years ago
Closed 17 years ago
Consistent crash with JAWS
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
Details
(Keywords: access, crash)
Attachments
(1 file)
|
1.94 KB,
patch
|
MarcoZ
:
review+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
Here's the steps to crash:
1. Load JAWS
2. Go to: http://dojotoolkit.org/~becky/work/dijit/tests/form/test_ComboBox.html
3. Insert+Z
4. Tab to the combo box.
5. Press M.
6. Arrow down twice.
7. Press Escape.
Crash report here:
http://crash-stats.mozilla.com/report/index/29c436d9-ea38-11dc-bdc2-001a4bd43ef6
| Assignee | ||
Comment 1•17 years ago
|
||
Attachment #307471 -
Flags: review?(marco.zehe)
Comment 2•17 years ago
|
||
Comment on attachment 307471 [details] [diff] [review]
Fix crash in case where aria-activedescendant is cleared. Safer code in general.
r=me
Attachment #307471 -
Flags: review?(marco.zehe) → review+
Comment 3•17 years ago
|
||
Aaron, please add check for State() and Role() to avoid crashes.
I would guess we shouldn't fall into the method when we remove attribute, it's preferable to catch this on top.
Should we do something special with focus?
Assignee: surkov.alexander → aaronleventhal
| Assignee | ||
Comment 4•17 years ago
|
||
Surkov, I have the first change, but as discussed on IRC we don't want to change the fall through behavior.
| Assignee | ||
Updated•17 years ago
|
Attachment #307471 -
Flags: approval1.9?
Comment 5•17 years ago
|
||
Comment on attachment 307471 [details] [diff] [review]
Fix crash in case where aria-activedescendant is cleared. Safer code in general.
a1.9=beltzner
Attachment #307471 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•