Bug 420960. Crash when aria-activedescendant attribute removed. r=marcoz, a=beltzner